--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,7 +3,9 @@ FROM python:3.7.2-slim
 WORKDIR /usr/src/app
 
 COPY requirements.txt ./
-RUN apt-get update gcc && apt-get install gcc && pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && \
+    apt-get install gcc && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
